--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,7 @@ root = true
 end_of_line = lf
 charset = utf-8
 indent_style = space
-insert_final_newline = true
-indent_size = 4
-
-[*]
-end_of_line = lf
-charset = utf-8
-indent_style = space
+trim_trailing_whitespace = true
 insert_final_newline = true
 indent_size = 4
 
@@ -35,3 +29,5 @@ indent_size = 2
 [*.json]
 indent_size = 2
 
+[*.md]
+trim_trailing_whitespace = false
