--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+build
 
 # Gatsby files
 .cache/
@@ -102,3 +103,4 @@ dist
 
 # TernJS port file
 .tern-port
+custom-elements.json
