--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "jina-docs-bot-ui",
   "version": "0.0.1",
-  "description": "Modular ui for Jina docs bot",
+  "description": "Modular ui for Jina docs bot; Webcomponent qa-bot following open-wc recommendations",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
+    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "test": "tsc -b src test && wtr --coverage",
+    "test:watch": "tsc -b src test && concurrently -k -r \"tsc -b src test --watch --preserveWatchOutput\" \"wtr --watch\"",
+    "build": "rimraf dist && tsc -b src && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
+    "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
+    "analyze": "cem analyze --litelement",
+    "start": "tsc -b src && concurrently -k -r \"tsc -b src --watch --preserveWatchOutput\" \"wds\""
   },
   "repository": {
     "type": "git",
@@ -22,15 +30,46 @@
   },
   "homepage": "https://github.com/jina-ai/jina-docs-bot-ui#readme",
   "dependencies": {
-    "lit-html": "^2.0.2",
+    "lit": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@open-wc/building-rollup": "^2.0.1",
+    "@open-wc/eslint-config": "^7.0.0",
+    "@open-wc/testing": "^3.0.3",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "@web/dev-server": "^0.1.28",
+    "@web/rollup-plugin-copy": "^0.3.0",
+    "@web/rollup-plugin-html": "^1.10.1",
+    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
+    "@web/rollup-plugin-polyfills-loader": "^1.1.1",
+    "@web/test-runner": "next",
+    "concurrently": "^6.4.0",
     "eslint": "^8.4.0",
     "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.60.2",
+    "rollup-plugin-minify-html-literals": "^1.2.6",
+    "rollup-plugin-summary": "^1.3.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-workbox": "^6.2.0",
     "typescript": "^4.5.2"
-  }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "customElements": "custom-elements.json"
 }
