wip(init): svgs, styles, http-service, rpc, controller

--- a/base.tsconfig.json
+++ b/base.tsconfig.json
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "useDefineForClassFields": false,
     "esModuleInterop": true,
     "strict": true,
     "noImplicitOverride": true,
