--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "events": "^3.3.0",
     "lit": "^2.0.2",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.1"
   },
@@ -42,7 +42,7 @@
     "@open-wc/testing": "^3.0.3",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash-es": "^4.17.5",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "@web/dev-server": "^0.1.28",
