--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@custom-elements-manifest/analyzer": "^0.5.7",
     "@open-wc/building-rollup": "^2.0.1",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.3",
@@ -57,6 +58,7 @@
     "lint-staged": "^12.1.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.2",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-minify-html-literals": "^1.2.6",
     "rollup-plugin-summary": "^1.3.0",
     "rollup-plugin-terser": "^7.0.2",
