--- a/package.json
+++ b/package.json
@@ -5,14 +5,32 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "lint": "eslint 'src/**/*.ts'",
+    "format": "eslint 'src/**/*.ts' && prettier \"src/**/*.ts\" --write --ignore-path .gitignore",
+    "clean": "rimraf dist build",
     "test": "tsc -b src test && wtr --coverage",
-    "test:watch": "tsc -b src test && concurrently -k -r \"tsc -b src test --watch --preserveWatchOutput\" \"wtr --watch\"",
-    "build": "rimraf dist && tsc -b src && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
+    "test:watch": "concurrently -k -r \"tsc -b src test --watch --preserveWatchOutput\" \"wtr --watch\"",
+    "test:prod": "tsc -b src test && MODE=prod wtr",
+    "test:prod:watch": "concurrently -k -r \"tsc -b src test --watch --preserveWatchOutput\" \"MODE=prod wtr --watch\"",
+    "build": "npm run clean && tsc -b src && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
-    "analyze": "cem analyze --litelement",
-    "start": "tsc -b src && concurrently -k -r \"tsc -b src --watch --preserveWatchOutput\" \"wds\""
+    "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
+    "analyze:watch": "cem analyze --litelement --globs \"src/**/*.ts\" --watch",
+    "serve": "npm run start",
+    "dev": "npm run start",
+    "serve:prod": "MODE=prod npm run serve",
+    "start": "npm run copy:dev && concurrently -k -r \"tsc -b src --watch --preserveWatchOutput\" \"npm run copy:dev:watch\" \"wds --root-dir=build --watch\"",
+    "copy:dev:watch": "copy-and-watch --watch src/**/*.{html,json} build/",
+    "copy:dev": "copy-and-watch src/**/*.{html} build/",
+    "copy:prod": "copy-and-watch src/**/*.{html} dist/",
+    "copy:prod:watch": "copy-and-watch --watch src/**/*.{html} dist/",
+    "docs": "npm run docs:clean && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
+    "docs:clean": "rimraf docs",
+    "docs:gen": "eleventy --config=.eleventy.cjs",
+    "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
+    "docs:build": "rollup -c --file docs/my-element.bundled.js",
+    "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
+    "docs:serve": "wds --root-dir=docs --node-resolve --watch"
   },
   "repository": {
     "type": "git",
@@ -21,7 +39,12 @@
   "keywords": [
     "Jina",
     "docqa",
-    "docs-bot"
+    "jina-qa-bot",
+    "ODQA",
+    "web-components",
+    "lit-element",
+    "typescript",
+    "lit"
   ],
   "author": "jina.ai",
   "license": "Apache-2.0",
@@ -53,6 +76,7 @@
     "@web/rollup-plugin-polyfills-loader": "^1.1.1",
     "@web/test-runner": "next",
     "concurrently": "^6.4.0",
+    "copy-and-watch": "^0.1.6",
     "eslint": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
