--- a/package.json
+++ b/package.json
@@ -12,31 +12,32 @@
     "test:watch": "concurrently -k -r \"tsc -b src test --watch --preserveWatchOutput\" \"wtr --watch\"",
     "test:prod": "tsc -b src test && MODE=prod wtr",
     "test:prod:watch": "concurrently -k -r \"tsc -b src test --watch --preserveWatchOutput\" \"MODE=prod wtr --watch\"",
-    "build": "npm run clean && tsc -b src && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
+    "build": "npm run clean && tsc -b src && npm run copy && rollup -c rollup.config.js && npm run copy:prod",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
     "analyze:watch": "cem analyze --litelement --globs \"src/**/*.ts\" --watch",
     "serve": "npm run start",
     "dev": "npm run start",
     "serve:prod": "MODE=prod npm run serve",
-    "start": "npm run copy:dev && concurrently -k -r \"tsc -b src --watch --preserveWatchOutput\" \"npm run copy:dev:watch\" \"wds --root-dir=build --watch\"",
-    "copy:dev:watch": "copy-and-watch --watch src/**/*.{html,json} build/",
-    "copy:dev": "copy-and-watch src/**/*.{html} build/",
-    "copy:prod": "copy-and-watch src/**/*.{html} dist/",
-    "copy:prod:watch": "copy-and-watch --watch src/**/*.{html} dist/",
-    "docs": "npm run docs:clean && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
-    "docs:clean": "rimraf docs",
+    "start": "npm run copy && concurrently -k -r \"tsc -b src --watch --preserveWatchOutput\" \"npm run copy:watch\" \"wds --root-dir=build --watch\"",
+    "copy:watch": "copy-and-watch --watch src/**/*.{html,json} build/",
+    "copy": "copy-and-watch src/**/*.html build/",
+    "copy:prod": "copy-and-watch src/**/*.html dist/",
+    "copy:prod:watch": "copy-and-watch --watch src/**/*.html dist/",
+    "docs": "npm run docs:clean && npm run analyze && npm run docs:gen && npm run build && npm run docs:assets",
+    "docs:watch": "npm run docs && npm run docs:gen:watch",
+    "docs:clean": "rimraf docs/_build",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
-    "docs:build": "rollup -c --file docs/my-element.bundled.js",
-    "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
-    "docs:serve": "wds --root-dir=docs --node-resolve --watch"
+    "docs:assets": "copy-and-watch node_modules/prismjs/themes/prism-okaidia.css docs/_build && copy-and-watch dist/* dist/**/* docs/_build/dist",
+    "docs:serve": "wds --root-dir=docs/_build --node-resolve --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jina-ai/jina-docs-bot-ui.git"
   },
   "keywords": [
+    "Jina AI",
     "Jina",
     "docqa",
     "jina-qa-bot",
@@ -60,6 +61,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@custom-elements-manifest/analyzer": "^0.5.7",
     "@open-wc/building-rollup": "^2.0.1",
     "@open-wc/eslint-config": "^7.0.0",
