--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "jina-docs-bot-ui",
+  "name": "@jina-ai/jina-qa-bot",
   "version": "0.0.1",
-  "description": "Modular ui for Jina docs bot; Webcomponent qa-bot following open-wc recommendations",
-  "main": "index.js",
+  "description": " WebComponent jina-qa-bot for Jina docs bot",
+  "main": "dist/jina-qa-bot.js",
+  "types": "dist/typings/jina-qa-bot.d.ts",
   "type": "module",
   "scripts": {
     "lint": "eslint 'src/**/*.ts'",
@@ -20,21 +21,22 @@
     "dev": "npm run start",
     "serve:prod": "MODE=prod npm run serve",
     "start": "npm run copy && concurrently -k -r \"tsc -b src --watch --preserveWatchOutput\" \"npm run copy:watch\" \"wds --root-dir=build --watch\"",
-    "copy:watch": "copy-and-watch --watch src/**/*.{html,json} build/",
-    "copy": "copy-and-watch src/**/*.html build/",
-    "copy:prod": "copy-and-watch src/**/*.html dist/",
-    "copy:prod:watch": "copy-and-watch --watch src/**/*.html dist/",
+    "copy:watch": "copy-and-watch --watch 'src/**/*.{html,json}' build/",
+    "copy": "copy-and-watch 'src/**/*.html' build/",
+    "copy:prod": "copy-and-watch 'src/**/*.html' dist/",
+    "copy:prod:watch": "copy-and-watch --watch 'src/**/*.html' dist/",
     "docs": "npm run docs:clean && npm run analyze && npm run docs:gen && npm run build && npm run docs:assets",
     "docs:watch": "npm run docs && npm run docs:gen:watch",
     "docs:clean": "rimraf docs/_build",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
-    "docs:assets": "copy-and-watch node_modules/prismjs/themes/prism-okaidia.css docs/_build && copy-and-watch dist/* dist/**/* docs/_build/dist",
-    "docs:serve": "wds --root-dir=docs/_build --node-resolve --watch"
+    "docs:assets": "copy-and-watch node_modules/prismjs/themes/prism-okaidia.css docs/_build && copy-and-watch 'dist/**/*' docs/_build/dist/",
+    "docs:serve": "wds --root-dir=docs/_build --watch",
+    "docs:dev": "npm run docs && concurrently -k -r \"npm run docs:gen:watch\" \"npm run docs:serve\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jina-ai/jina-docs-bot-ui.git"
+    "url": "https://github.com/jina-ai/jina-docs-bot-ui.git"
   },
   "keywords": [
     "Jina AI",
@@ -47,7 +49,9 @@
     "typescript",
     "lit"
   ],
-  "author": "jina.ai",
+  "contributors": [
+    "Yanlong Wang <yanlong.wang@jina.ai>"
+  ],
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/jina-ai/jina-docs-bot-ui/issues"
@@ -83,6 +87,7 @@
     "eslint": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.2",
     "rollup-plugin-copy": "^3.4.0",
