--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "concurrently": "^6.4.0",
     "copy-and-watch": "^0.1.6",
     "eslint": "^8.4.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-lit-a11y": "^2.2.0",
+    "eslint-plugin-wc": "^1.3.2",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "lodash": "^4.17.21",
