--- a/base.tsconfig.json
+++ b/base.tsconfig.json
@@ -19,6 +19,7 @@
     "esModuleInterop": true,
     "strict": true,
     "noImplicitOverride": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "allowJs": true
   }
 }
