--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,8 @@
   "cSpell.enabled": true,
   "cSpell.words": [
     "docbot",
+    "DOCQA",
+    "JINA",
     "maxlength",
     "qabot",
     "tabindex",
